compile_log.txt
INFO ESPHome 2025.12.4
INFO Reading configuration wrenstove-thermalcam.yaml...
DEBUG: LOADING MLX90640_CUSTOM __INIT__.PY
INFO Generating C++ source...
INFO Compiling app... Build path: C:\Users\lewi3\GitHub\M5Stack-ESPHome-1\.esphome\build\wrenstove-thermalcam
Processing wrenstove-thermalcam (board: m5stack-core-esp32; framework: espidf; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.31-2/platform-espressif32.zip)

--------------------------------------------------------------------------------

HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash

 - contrib-piohome @ 3.4.4 

 - framework-espidf @ 3.50501.0 (5.5.1) 

 - tool-cmake @ 4.0.3 

 - tool-esp-rom-elfs @ 2024.10.11 

 - tool-esptoolpy @ 5.1.0 

 - tool-mklittlefs @ 3.2.0 

 - tool-ninja @ 1.13.1 

 - tool-scons @ 4.40801.0 (4.8.1) 

 - toolchain-xtensa-esp-elf @ 14.2.0+20241119

Reading CMake configuration...

Dependency Graph

|-- noise-c @ 0.1.10

|-- ArduinoJson @ 7.4.2

Compiling .pioenvs\wrenstove-thermalcam\src\main.cpp.o

src/main.cpp: In function 'void setup()':

src/main.cpp:271:40: error: 'class esphome::web_server::WebServer' has no member named 'getServer'; did you mean 'WebServer'?

  271 |               web_server_webserver_id->getServer()->on("/thermal.bmp", HTTP_GET, [](AsyncWebServerRequest *request) {

      |                                        ^~~~~~~~~
      |                                        WebServer

*** [.pioenvs\wrenstove-thermalcam\src\main.cpp.o] Error 1

========================= [FAILED] Took 10.99 seconds =========================

